--- a/content/blog/12-15-2022.md
+++ b/content/blog/12-15-2022.md
@@ -25,3 +25,5 @@ He got a bath right after we got inside. He got a major case of the zoomies afte
 After drying off though, he was back to his usual fluffy self, with a coat as white as snow!
 
 ![dry bichon laying down](https://assets.theprophetofdog.com/blog-photos/12-15-2022/4.jpeg)
+
+Good night and hopefully see you all tomorrow!
