--- a/content/blog/12-15-2022.md
+++ b/content/blog/12-15-2022.md
@@ -4,7 +4,7 @@ date: 2022-12-15T17:54:34-05:00
 slug: ''
 description: 'Puppy has fun in the field, but ends up making a mess of himself.'
 keywords: []
-draft: true
+draft: false
 tags: []
 math: false
 toc: false
